src/test/resources/ttml/test-suite/pass/dur016-pass.ttml
<?xml version="1.0" encoding="UTF-8"?>
<!-- Short successive ISDs -->
<tt xml:lang="en"
    xmlns="http://www.w3.org/ns/ttml"
    xmlns:tts="http://www.w3.org/ns/ttml#styling">
  <head>
  </head>
  <body>
    <div>
      <p begin="0s" end="0.1s">a</p>
      <p begin="0.1s" end="0.2s">ab</p>
      <p begin="0.2s" end="0.3s">abc</p>
      <p begin="0.2s" end="0.3s">abcd</p>
      <p begin="0.3s" end="0.4s">abcde</p>
      <p begin="0.4s" end="0.5s">abcdef</p>
      <p begin="0.5s" end="0.6s">abcdefg</p>
    </div>
  </body>
</tt>
