src/test/resources/ttml/test-suite/fail/dur004-fail.ttml
<?xml version="1.0" encoding="UTF-8"?>
<!-- Available rendering time exceeded due to glyph copy (CJK) -->
<tt xml:lang="en"
    xmlns="http://www.w3.org/ns/ttml"
    xmlns:tts="http://www.w3.org/ns/ttml#styling">
  <head>
  </head>
  <body>
    <div>
      <p begin="2.5s" end="3s" tts:fontSize="300%">a</p>
      <p begin="3s" end="4s" tts:fontSize="300%">ああああああああああああああああああああああああああああ</p>
    </div>
  </body>
</tt>
